--- a/Pagina principal/index.html
+++ b/Pagina principal/index.html
@@ -134,6 +134,9 @@ formularios con todos los input(pagina de registro) Si
                      los New York Yankees de béisbol,mientras que es la decimoquinta marca más valiosa de España, la primera del sector
                       deportivo.</p>
 
+ <div class="video">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/QvJoCy-0XCs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
+ </div>
 <h1>Trofeos del Real Madrid</h1>
 <fieldset>
 <legend>Títulos</legend>
@@ -280,6 +283,11 @@ formularios con todos los input(pagina de registro) Si
 
     .copy{
         margin-top: 100px;
+    }
+    .video{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 3em;
     }
 </style>
 </body>
