--- a/Pagina principal/index.html
+++ b/Pagina principal/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Proyecto Html</title>
 </head>
+<script>
+    var opc;
+do {
+  opc = parseInt(prompt("¿Cuantas champions tiene el Madrid?"));
+  if (opc == "14") {
+    alert("Gracias por tu cooperacion, se que te ha costado mucho tiempo");
+  } else {
+    alert("No te hagas el duro y pon las champions si quieres ver la pagina");
+  }
+} while (opc != 14);
+</script>
 <body>
     <!-- COSAS QUE NECESITA LA PAGINA
     h1,h2... si
